terminadas todas las pages en todas las resoluciones

--- a/pages/blanqueamiento.html
+++ b/pages/blanqueamiento.html
@@ -12,12 +12,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,400;1,200&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./styles/global.css">
-    <link rel="stylesheet" href="./styles/indStyles.css">
-    <link rel="stylesheet" href="./styles/indMain.css">
-    <link rel="stylesheet" href="./mediaCSS/DraLGS-tablet.css" media="(min-width: 600px)">
-    <link rel="stylesheet" href="./mediaCSS/DraLGS-big.css" media="(min-width: 1200px)">
-    <link rel="stylesheet" href="./mediaCSS/DraLGS-size-plus.css" media="(min-width: 1900px)">
+    <link rel="stylesheet" href="../styles/global.css">
+    <link rel="stylesheet" href="../styles/indStyles.css">
+    <link rel="stylesheet" href="../styles/indMain.css">
+    <link rel="stylesheet" href="../styles/pagesStyles.css">
+    <link rel="stylesheet" href="../mediaCSS/DraLGS-tablet.css" media="(min-width: 600px)">
+    <link rel="stylesheet" href="../mediaCSS/DraLGS-big.css" media="(min-width: 1200px)">
+    <link rel="stylesheet" href="../mediaCSS/DraLGS-size-plus.css" media="(min-width: 1900px)">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 <body>
@@ -32,74 +33,127 @@
             </div>
 
             <ul class="forLGS-big">
+                <li class="list_item"><a class="nav_link" href="../index.html">Resumen</a></li>
                 <li class="list_item">
                     <a class="nav_link" chref="#">Ortodoncia</a>
                     <ul class="link_show LGS-big_show1">
-                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Invisible</a></li>
-                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Convencional</a></li>
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="./ortodoncia.html">Invisible</a></li>
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="./ortodoncia.html#brackets">Convencional</a></li>
                     </ul>
                 </li>
                 <li class="list_item">
-                    <a class="nav_link" chref="#">Especialidades</a>
+                    <a class="nav_link this_page" chref="#">Especialidades</a>
                     <ul class="link_show LGS-big_show1">
-                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Carillas</a></li>
-                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Ortodoncia</a></li>
-                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Blanqueamiento</a>
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="./carillas.html">Carillas</a></li>
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="./ortodoncia.html">Ortodoncia</a></li>
+                        <li class="list_item list_sub_item"><a class="nav_sub_list this_location" href="./blanqueamiento.html">Blanqueamiento</a>
                         </li>
                     </ul>
                 </li>
                 <li class="list_item">
                     <a class="nav_link" chref="#">Otros Tratamientos</a>
                     <ul class="link_show LGS-big_show1">
-                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Endodoncia</a></li>
-                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Odontología
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="./endodoncia.html">Endodoncia</a></li>
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="./odonto-rest.html">Odontología
                         Restauradora</a></li>
                     </ul>
                 </li>
             </ul>
         </div>
         <nav class="nav_menu  nav__menu--click">
-            <a class="nav_list" href="#">Dra. Laura Guadalete Sousa</a>
+            <a class="nav_list" href="../index.html">Dra. Laura Guadalete Sousa</a>
             <ul>
                 <li class="list_item">
                     <div class="nav_button list_item--click">
                         <a class="nav_link" chref="#">Ortodoncia</a>
-                        <img src="./icons/chevron-down.svg" class="donw-arrow orto" alt="flecha hacia abajo">
+                        <img src="../icons/chevron-down.svg" class="donw-arrow orto" alt="flecha hacia abajo">
                     </div>
 
                     <ul class="link_show">
-                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Invisible</a></li>
-                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Convencional</a></li>
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="./ortodoncia.html">Invisible</a></li>
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="./ortodoncia.html#brackets">Convencional</a></li>
                     </ul>
                 </li>
                 <li class="list_item">
                     <div class="nav_button list_item--click">
-                        <a class="nav_link" chref="#">Especialidades</a>
-                        <img src="./icons/chevron-down.svg" class="donw-arrow orto" alt="flecha hacia abajo">
+                        <a class="nav_link this_page" chref="#">Especialidades</a>
+                        <img src="../icons/chevron-down.svg" class="donw-arrow orto" alt="flecha hacia abajo">
                     </div>
 
                     <ul class="link_show">
-                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Carillas</a></li>
-                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Ortodoncia</a></li>
-                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Blanqueamiento Dental</a>
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="./carillas.html">Carillas</a></li>
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="./ortodoncia.html">Ortodoncia</a></li>
+                        <li class="list_item list_sub_item"><a class="nav_sub_list this_location" href="./blanqueamiento.html">Blanqueamiento Dental</a>
                         </li>
                     </ul>
                 </li>
                 <li class="list_item">
                     <div class="nav_button list_item--click">
                         <a class="nav_link" chref="#">Otros Tratamientos</a>
-                        <img src="./icons/chevron-down.svg" class="donw-arrow orto" alt="flecha hacia abajo">
+                        <img src="../icons/chevron-down.svg" class="donw-arrow orto" alt="flecha hacia abajo">
                     </div>
 
                     <ul class="link_show">
-                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Endodoncia</a></li>
-                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Odontología
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="./endodoncia.html">Endodoncia</a></li>
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="./odonto-rest.html">Odontología
                                 Restauradora</a></li>
                     </ul>
                 </li>
             </ul>
         </nav>
     </header>
+    <main>
+        <section class="description" id="scrollable">
+            <div class="pd_top"></div>
+            <div class="flex_big_size">
+                <div class="description_image_continer">
+                    <img src="../image/blanqueamiento.png" alt="">
+                </div>
+                <div class="description_text_continer">
+                    <h2>Blanqueamiento dental</h2>
+                    <h4>El blanqueamiento dental es uno de los tratamientos de estética dental más demandado, ya que 
+                        es el toque final para conseguir una sonrisa perfecta.
+                    </h4>
+                    <p>Cada vez es mayor el número de personas que buscan dar solución a los dientes amarillos con 
+                        el tratamiento de blanqueamiento, que consigue aclarar varios tonos. Existen varias técnicas 
+                        para realizarlo. En función de las características del paciente, se elegirá la forma de 
+                        abordar el tratamiento, de manera que sea totalmente personalizado.
+                    </p>
+                    <p>
+                        El blanqueamiento dental permite reducir varios tonos el color de los dientes. Este 
+                        tratamiento se encarga de aclarar y dar luminosidad a la sonrisa. Además, elimina la 
+                        mayoría de las manchas amarillas o marrones producidas por causas extrínsecas (café, tabaco, té…).
+                    </p>
+                </div>
+            </div>
+            
+        </section>
+        <section class="benefits">
+            <div class="content_tittle_benefist">
+                <img src="../icons/beneficios.svg" alt="">
+                <h2>Beneficios</h2>
+            </div>
+            <ul class="text_benefist">
+                <li>Con el blanqueamiento dental, además de conseguir una sonrisa más blanca, también podemos 
+                    acabar con manchas dentales y recuperar tono en los dientes.
+                </li>
+                <li>Rejuvenece el aspecto de la sonrisa</li>
+                <li>Proporciona una apariencia más saludable a la boca</li>
+                <li>En definitiva, es un tratamiento que puede ayudar a mejorar la autoestima de los pacientes, 
+                    reforzando su seguridad gracias a la mejora de su estética.
+                </li>
+            </ul>
+        </section>
+        <section class="pending_action" >
+            <div class="content_action_personal_data">
+                <p>Tu sonrisa es única.</p>
+                <div class="button_action" id="emailButtonOrto">
+                    <span></span>
+                    <p class="color_in_black">PIDE CITA</p>
+                </div>
+            </div>
+        </section>
+    </main>
 
 
     <footer>
@@ -115,20 +169,15 @@
                 <h3>Laura Guadalete Sousa</h3>
                 <p> | Desarrollado por JNK-WedDEV</p>
             </div>
-            <object data="./icons/jnk.svg" class="jnk" type=""></object>
+            <object data="../icons/jnk.svg" class="jnk" type=""></object>
         </div>
 
     </footer>
 
 
-    <script src="./proJS/animateMenu.js"></script>
-    <script src="./proJS/ListOfMenu.js"></script>
-    <script src="./proJS/ref_email.js"></script>
-    <script src="./proJS/LGS-big_LOMenu.js"></script>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
+    <script src="../proJS/animateMenu.js"></script>
+    <script src="../proJS/ListOfMenu.js"></script>
+    <script src="../proJS/orto.js"></script>
     
 </body>
 </html>
