--- a/pages/carillas.html
+++ b/pages/carillas.html
@@ -164,7 +164,7 @@
                 <h3>Laura Guadalete Sousa</h3>
                 <p> | Desarrollado por JNK-WedDEV</p>
             </div>
-            <object data="./icons/jnk.svg" class="jnk" type=""></object>
+            <object data="../icons/jnk.svg" class="jnk" type=""></object>
         </div>
 
     </footer>
