--- a/pages/ortodoncia.html
+++ b/pages/ortodoncia.html
@@ -37,15 +37,15 @@
                 <li class="list_item">
                     <a class="nav_link this_page" chref="#">Ortodoncia</a>
                     <ul class="link_show LGS-big_show1">
-                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="">Invisible</a></li>
-                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Convencional</a></li>
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="./ortodoncia.html#scrollable">Invisible</a></li>
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="./ortodoncia.html#brackets">Convencional</a></li>
                     </ul>
                 </li>
                 <li class="list_item">
                     <a class="nav_link" chref="#">Especialidades</a>
                     <ul class="link_show LGS-big_show1">
                         <li class="list_item list_sub_item"><a class="nav_sub_list" href="./carillas.html">Carillas</a></li>
-                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Ortodoncia</a></li>
+                        <li class="list_item list_sub_item"><a class="nav_sub_list this_location" href="#">Ortodoncia</a></li>
                         <li class="list_item list_sub_item"><a class="nav_sub_list" href="./blanqueamiento.html">Blanqueamiento</a>
                         </li>
                     </ul>
@@ -70,8 +70,8 @@
                     </div>
 
                     <ul class="link_show">
-                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Invisible</a></li>
-                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Convencional</a></li>
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="./ortodoncia.html#scrollable">Invisible</a></li>
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="./ortodoncia.html#brackets">Convencional</a></li>
                     </ul>
                 </li>
                 <li class="list_item">
@@ -82,7 +82,7 @@
 
                     <ul class="link_show">
                         <li class="list_item list_sub_item"><a class="nav_sub_list" href="./carillas.html">Carillas</a></li>
-                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Ortodoncia</a></li>
+                        <li class="list_item list_sub_item"><a class="nav_sub_list this_location" href="#">Ortodoncia</a></li>
                         <li class="list_item list_sub_item"><a class="nav_sub_list" href="./blanqueamiento.html">Blanqueamiento Dental</a>
                         </li>
                     </ul>
