footer links listo en todas las resoluciones

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                         </div>
                         
                     </div>
-                    <div class="attention">
+                    <div class="attention" id="contact">
                         <div class="description_atention">
                             <img src="/icons/map-point.svg" alt="" class="attention_icon">
                             <p>Atención</p>
@@ -340,10 +340,10 @@
     <footer>
         <div class="footer">
             <div class="content">
-                <a>COOKIES</a>
-                <a>PROTECCIÓN DE DATOS</a>
-                <a>AVISO LEGAL</a>
-                <a>CONTACTO</a> 
+                <a href="./pages/cookies.html" >COOKIES</a>
+                <a href="./pages/cookies.html#protection" >PROTECCIÓN DE DATOS</a>
+                <a href="./pages/cookies.html#aviso" >AVISO LEGAL</a>
+                <a href="#contact" >CONTACTO</a> 
             </div>
             <div class="content signature">
                 <p>copyright 2023</p>
