--- a/pages/ortodoncia.html
+++ b/pages/ortodoncia.html
@@ -201,10 +201,10 @@
     <footer>
         <div class="footer">
             <div class="content">
-                <a>COOKIES</a>
-                <a>PROTECCIÓN DE DATOS</a>
-                <a>AVISO LEGAL</a>
-                <a>CONTACTO</a> 
+                <a href="./cookies.html" >COOKIES</a>
+                <a href="./cookies.html#protection" >PROTECCIÓN DE DATOS</a>
+                <a href="./cookies.html#aviso" >AVISO LEGAL</a>
+                <a href="../index.html#contact" >CONTACTO</a>
             </div>
             <div class="content signature">
                 <p>copyright 2023</p>
