Arreglos en produccion listos

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <div class="profile_information_content">
                 <div class="contente_description">
                     <h1 class="description_reveal_h1">Dra. LAURA</h1>
-                    <p class="description_reveal_p1">Lider en el sector de la ortodoncia.</p>
+                    <p class="description_reveal_p1">Líder en el sector de la ortodoncia.</p>
                     <p class="description_reveal_p2">Especializada en ortodoncia invisible</p>
                     <p class="description_reveal_p3">Experta en estética dentofacial.</p>
                     
@@ -164,7 +164,7 @@
             <div class="content_text_personal_description">
                 <div class="referens_persoal_data">
                     <h1>Dra. LAURA</h1>
-                    <p>Lider en el sector de la ortodoncia.</p>
+                    <p>Líder en el sector de la ortodoncia.</p>
                 </div>
                 <h3>Avalada por conocimiento y experiencia.</h3>
             </div>
@@ -182,10 +182,10 @@
                             <span class="line_separator"></span>
                             <div class="formation_description">
                                 <ul>
-                                    <li>- Licenciada en Odontología.</li>
+                                    <li>- Licenciada en Odontología por la Universidad de Salamanca.</li>
                                     <li>- Postgrado de Ortodoncia. </li>
                                     <li>- Máster de Ortodoncia Invisible.</li>
-                                    <li>- Master en endodoncia.</li>
+                                    <li>- Formación en endodoncia.</li>
                                     <li>- Odontopediatría y Traumatología Dental</li>
                                     <li>- Curso de Estética en Prótesis Fija</li>
                                 </ul>
@@ -204,7 +204,7 @@
                                     <li>- 6 años como ortodoncista</li>
                                     <li>- 5 años como dentista general y ortodoncista en Francia.</li>
                                     <li>- 4 años como dentista general y ortodoncista en Neofacial (España).</li>
-                                    <li>- Mas de 1500 pacientes satisfechos</li>
+                                    <li>- Más de 1500 pacientes satisfechos</li>
                                 </ul>
                                 
                             </div>
@@ -270,7 +270,7 @@
                 <div class="paragraph_continer" data-aos="zoom-out-down" data-aos-easing="linear"
                     data-aos-duration="1000"
                 >
-                    <p>La <strong>Dra. Laura Guadalete Sousa</strong> atiende a cada uno de sus pacientes siguiendo la mas <strong>avanzada metodología</strong>. 
+                    <p>La <strong>Dra. Laura Guadalete Sousa</strong> atiende a cada uno de sus pacientes siguiendo la más <strong>avanzada metodología</strong>. 
                         Comienza con un estudio psicológico y conductual de cada paciente, para <strong>diseñar</strong> una sonrisa de a corde con su personalidad.</p>
                     <p>Para llevar a cabo esta <strong>metodología representativa</strong>, desde la primera consulta, se crea una <strong>admosfera de confianza</strong> 
                         mediante las primeras charlas. A partir de ese punto de vínculo, doctora paciente, surgen necesidades intrisecas que ayudan a la doctora a estructurar un <strong>tratamieto personalizado</strong></p>
