--- a/pages/endodoncia.html
+++ b/pages/endodoncia.html
@@ -107,7 +107,7 @@
             <div class="pd_top"></div>
             <div class="flex_big_size">
                 <div class="description_image_continer">
-                    <img src="../image/endodoncia.png" alt="">
+                    <img src="../image/laura_trabajando.jpeg" alt="">
                 </div>
                 <div class="description_text_continer">
                     <h2>Endodoncia</h2>
@@ -170,7 +170,7 @@
                 <h3>Laura Guadalete Sousa</h3>
                 <p> | Desarrollado por JNK-WedDEV</p>
             </div>
-            <object data="./icons/jnk.svg" class="jnk" type=""></object>
+            <object data="../icons/jnk.svg" class="jnk" type=""></object>
         </div>
 
     </footer>
