--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <section class="profile_picture-under section" id="scrollable">
            
             <video onloadedmetadata="this.muted=true" playsinline autoplay loop class="video">
-                <source src="./video_fondo.mp4" type="video/mp4" >
+                <source src="./video/video_fondo.mp4" type="video/mp4" >
             </video>
 
             <div class="photoF_bigLGS">
