actualizacion de clases para hostinger

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <main >
         <section class="profile_picture-under section" id="scrollable">
            
-            <video onloadedmetadata="this.muted=true" playsinline autoplay loop class="video">
+            <video onloadedmetadata="this.muted=true" playsinline autoplay loop class="back_video">
                 <source src="./video/video_fondo.mp4" type="video/mp4" >
             </video>
 
