Agrego metadatos amra mejorar el SEO + mejoras del titulo para SEO

--- a/pages/blanqueamiento.html
+++ b/pages/blanqueamiento.html
@@ -3,7 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dra Laura - Blanqueamiento</title>
+    <meta name="keywrods" content="Dentista Cáceres, ortodoncia, ortodoncia cáceres, ortodoncista, ortodoncia invisible, 
+        ortodoncista cáceres, ortodoncia infantil cáceres, Dentista para niños, odontopediatria en cáceres, mejores dentistas en cáceres,
+        clínica dental, clínicas dentales en cáceres, endodoncia, endodoncia en cáceres, odontologo, odontologa, odontología en cáceres,
+        estética dental, dolor de muelas, encías, dentista de urgencias, urgencias dentales, invisalign cáceres, blanqueamiento dental,
+        los mejores blanqueamientos dentales en Cáceres"
+    >
+    <meta name="description" content="Especialista en ortodoncia invisible y convencional. Experta en estética dentofacial. 
+        Las mejores manos para cuidar tu salud bucodental. Tratamientos de odontología general, endodoncia, carillas, empastes. "
+    >
+    <title>Dra Laura | Odontologa - Ortodoncista - Dentista en Cáceres | Blanqueamiento</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
