cambio de textos para indexasion en google

--- a/pages/endodoncia.html
+++ b/pages/endodoncia.html
@@ -120,13 +120,14 @@
                 </div>
                 <div class="description_text_continer">
                     <h2>Endodoncia</h2>
-                    <h4>Es el procedimiento a través del cual el profesional procede a retirar total o parcialmente 
-                        el nervio, para posteriormente sellar el conducto donde se sitúa.
+                    <h4>En este tratamiento los especialistas retiran total o parcialmente el nervio de la pieza dental y posteriormente sellan 
+                        el conducto donde estaba situado dicho nervio.
                     </h4>
-                    <p>El objetivo principal de la Endodoncia es evitar la extracción del diente y los problemas que se estén causando en la zona.
-                        Con la Endodoncia Microscópica damos un paso más, porque utilizamos la mejor y última tecnología para lograr una visión 
-                        exacta de la zona donde se va a actuar. Tal es así, que conseguimos ampliar la visualización de la pieza dental. De esta manera, 
-                        conseguimos detectar con eficacia las áreas afectadas, para realizar una extracción e intervención más ajustada y mínimamente invasiva.. 
+                    <p>Evitar la extracción del diente es el objetivo principal de la Endodoncia. La Endodoncia Microscópica es un salto 
+                        cualitativo en el tratamiento porque utilizamos la mejor y última tecnología para lograr una visión exacta de la 
+                        zona donde se va a actuar. Con el microscopio los profesionales consiguen ampliar la visualización de la pieza 
+                        dental. De esta manera, pueden detectar con eficacia las áreas afectadas, para, con suma precisión, realizar una 
+                        extracción e intervención más milimétrica y mínimamente invasiva..
                     </p>
                    
                 </div>
@@ -139,15 +140,16 @@
                 <h2>Beneficios</h2>
             </div>
             <ul class="text_benefist">
-                <li>El tratamiento de endodoncia permite salvar y reparar dientes gravemente descompuestos o 
-                    infectados, permitiendo al paciente conservar su pieza dental original.
+                <li>El tratamiento de endodoncia permite reparar y salvar dientes gravemente infectados o 
+                    descompuestos, permitiendo al paciente conservar su pieza dental original.
                 </li>
-                <li>Mínimamente invasivo.</li>
-                <li>Evita la halitosis y otras consecuencias. Recuperar un diente infectado no solo es beneficioso 
+                <li>Se recupera un diente infectado que no solo es beneficioso 
                     para esa pieza dental, sino para la salud del conjunto de la boca.
                 </li>
+                <li>Evita la halitosis y otras consecuencias.</li>
+                <li>Mínimamente invasivo.</li>
                 <li>Recupera la masticación sin molestias.</li>
-                <li>Previene tratamientos dentales más caros. Un diente descompuesto puede resultar en el movimiento
+                <li>Previene tratamientos dentales más costosos. Un diente en ma estado puede resultar en el movimiento
                     de los dientes adyacentes. Por tanto, con un tratamiento de endodoncia que recupere la salud de 
                     una pieza dental también se puede prevenir la necesidad de tratamientos más caros como la 
                     ortodoncia a futuro.
