--- a/pages/ortodoncia.html
+++ b/pages/ortodoncia.html
@@ -120,17 +120,16 @@
                 </div>
                 <div class="description_text_continer">
                     <h2>Ortodoncia invisible</h2>
-                    <h4>Trabajamos con los alineadores más transparentes y más cómodos.
-                        Además, han sido diseñados para que realicen un movimiento dental más eficiente y efectivo.
+                    <h4>Utilizamos los mejores alineadores del mercado, los mas transparentes y cómodos. Estas 
+                        férulas son diseñadas y fabricadas con tecnología puntera para garantizar un movimiento 
+                        dental más eficiente y efectivo.
                     </h4>
-                    <p>Con el empleo de fundas transparentes, conocidas como alineadores, y las manos expertas de 
-                        nuestra doctora, podemos tratar cualquier maloclusión dental del mismo modo que hacíamos 
-                        con los antiguos brackets. 
+                    <p>Podemos tratar con efectividad cualquier maloclusión dental con la ayuda de estos alineadores. 
+                        Las manos expertas de la doctora Laura sabrán como moldear tu sonrisa medida de tu felicidad.
                     </p>
                     <p>
-                        Mediante el intercambio semanal de diferentes férulas, solucionamos en cuestión de 
-                        semanas aquellos problemas estéticos y funcionales que tanto han preocupado a los 
-                        pacientes durante años.
+                        A medida que intercambiamos las férulas semana tras semana, vamos dando solución aquellos 
+                        problemas estéticos y funcionales que puedan resultar preocupantes para nuestros pacientes
                     </p>
                 </div>
             </div>
@@ -142,17 +141,17 @@
                 <h2>Beneficios</h2>
             </div>
             <ul class="text_benefist">
-                <li>Mejora la higiene oral, y evita la inflamación de las encías provocada por el 
-                    acúmulo de bacterias en los brackets. Además, previene las caries y las 
-                    descalcificaciones dentales.
+                <li>Sin heridas; Sin llagas; Sin urgencias.</li>
+                <li>Evita la inflamación de las encías provocada por el acúmulo de bacterias en los brackets y mejora
+                    la higiene oral. Además, previene las caries y las descalcificaciones dentales.
                 </li>
-                <li>Sin llagas; Sin heridas; Sin urgencias.</li>
+                <li>En comparación con los tradicionales Brackets, el tratamiento es mas rápido. Además las citas 
+                    son cortas y espaciadas.
+                </li>
                 <li>No interfiere en tu vida diaria, sin alteraciones en el habla, realizando actividad deportiva, etc.</li>
-                <li>Presupuesto cerrado sin sobrecargos inesperados.</li>
-                <li>La duración es de la mitad o menor tiempo que la que se necesitaba con los brackets. 
-                    Además las citas son cortas y espaciadas.
-                </li>
-                <li>Es transparente, no lleva metales, y prácticamente no se nota.</li>
+                <li>No lleva metales, Es transparente y prácticamente no se nota.</li>
+                <li>Presupuesto cerrado sin sobrecargos de última hora.</li>
+
             </ul>
         </section>
 
@@ -163,17 +162,18 @@
                 </div>
                 <div class="description_text_continer">
                     <h2>Ortodoncia convencional</h2>
-                    <h4>Este tratamiento odontológico consiste en corregir, a través de presión mecánica, 
-                        la posición de las piezas dentales que no se encuentran alineadas de forma correcta 
-                        y que afectan la mordida y la apariencia de la sonrisa de las personas.
+                    <h4>Con este tratamiento odontológico podemos corregir, a través de presión mecánica, 
+                        la posición de las piezas dentales que no se encuentran correctamente alineadas influyendo 
+                        en la mordida y la apariencia de la sonrisa de los pacientes.
                     </h4>
-                    <p>Es el procedimiento más identificado. También conocido como ortodoncia metálica o brackets, 
-                        se vale del uso de alambres de metal para fabricar aparatos a la medida de la boca del 
-                        paciente, estos son ajustados con ligaduras que presionan a los dientes hacia la posición que se desea.
+                    <p>También conocido como ortodoncia metálica o Brackets, es el procedimiento más identificado 
+                        en el campo de la ortodoncia. Con esta técnica se utilizan alambres de metal para fabricar 
+                        aparatos a la medida de la boca del paciente. Esta estructura se ajusta con ligaduras que 
+                        ejercen la presión necesaria para lograr la alineación.
                     </p>
                     <p>
-                        El objetivo de esta técnica es conseguir que los dientes y la mandíbula vuelvan a su equilibrio 
-                        natural y, por tanto, lograr una mejoría estética del paciente.
+                        El objetivo final del tratamiento es lograr una mejoría estética del paciente, para ello, 
+                        corregimos la maloclusión dándole un equilibrio natural a los dientes y la mandíbula.
                     </p>
                 </div>
             </div>
@@ -185,11 +185,11 @@
                 <h2>Beneficios</h2>
             </div>
             <ul class="text_benefist">
+                <li>Logramos una adecuada armonía dental.</li>
+                <li>Conseguimos corrección dentaria</li>
+                <li>Prevenimos algunas patologías que pueden afectar en el futuro</li>
                 <li>Es un tratamiento económico.
                 </li>
-                <li>Conseguimos armonía dental.</li>
-                <li>Logramos corrección dentaria</li>
-                <li>Prevenimos otras patologías futuras</li>
                 <li>En definitiva, es un tratamiento 
                     que puede ayudar a mejorar la autoestima de los pacientes, reforzando 
                     su seguridad gracias a la mejora de su estética.
