contacto por whatsapp agregado correctamente

--- a/index.html
+++ b/index.html
@@ -178,6 +178,9 @@
                 <h3>Avalada por conocimiento y experiencia.</h3>
             </div>
 
+            <a href="https://wa.me/34645337989" target="_blank" class="whatsapp_icon"> 
+                <img src="./icons/whatsapp.svg" alt="icono de whatsapp">
+            </a>
             <div class="content_flex_for_bigScreem" 
                 data-aos="fade-up"data-aos-duration="1000" data-aos-easing="ease-in-out"
             >
@@ -232,8 +235,8 @@
                                 <li><strong>- Dirección</strong></li>
                                 <li>Ave París, 24. 10005, Cáceres (Extremadura, España)</li>
                                 <span class="space_separator"></span>
-                                <li><strong>- Telefono</strong></li>
-                                <li>927 153 868</li>
+                                <li><strong>- Correo electrónico</strong></li>
+                                <li>ortodoncista@lauraguadaletesousa.com</li>
                                 <span class="space_separator"></span>
                                 <li><strong>- WhatsApp</strong></li>
                                 <li>645 33 79 89</li>
@@ -333,6 +336,7 @@
             </div>
             
         </section>
+
     </main>
     <footer>
         <div class="footer">
