listos cambios para produccion. formulario + whatsapp

--- a/pages/odonto-rest.html
+++ b/pages/odonto-rest.html
@@ -157,10 +157,10 @@
         <section class="pending_action" >
             <div class="content_action_personal_data">
                 <p>Tu sonrisa es única.</p>
-                <div class="button_action" id="emailButtonOrto">
+                <a href="../index.html#formEmail" class="button_action">
                     <span></span>
                     <p class="color_in_black">PIDE CITA</p>
-                </div>
+                </a>
             </div>
         </section>
     </main>
